Heart Rate Monitor Workspace/HRMon.cydsn/BUILD.log
--------------- Build Started: 05/12/2021 08:46:10 Project: HRMon, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Catherine\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\Catherine\Desktop\Monash\0. 2021\1. Sem 1\TRC3500\Heart Rate Monitor\Repo\HR-Mon\Heart Rate Monitor Workspace\HRMon.cydsn\HRMon.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\Catherine\Desktop\Monash\0. 2021\1. Sem 1\TRC3500\Heart Rate Monitor\Repo\HR-Mon\Heart Rate Monitor Workspace\HRMon.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:65:13: error: 'lux' undeclared (first use in this function)
         if (lux > threshold) { //Main loop for detected finger
             ^
main.c:65:13: note: each undeclared identifier is reported only once for each function it appears in
main.c:65:19: error: 'threshold' undeclared (first use in this function)
         if (lux > threshold) { //Main loop for detected finger
                   ^
In file included from Generated_Source\PSoC5/project.h:23:0,
                 from main.c:12:
Generated_Source\PSoC5/Seven_Segment_aliases.h:46:27: error: called object is not a function or function pointer
 #define Seven_Segment_6   (Seven_Segment__6__PC)
                           ^
main.c:70:13: note: in expansion of macro 'Seven_Segment_6'
             Seven_Segment_6(1);
             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 05/12/2021 08:47:47 ---------------
